--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,51 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# 公开仓库专用的 .gitignore
+# 用于创建公开展示仓库时使用
 
-node_modules
-dist
-dist-ssr
+# 依赖
+node_modules/
+.pnp
+.pnp.js
+
+# 测试
+coverage/
+
+# 生产构建
+dist/
+dist-ssr/
 *.local
 
-# Editor directories and files
+# 编辑器
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# 环境变量（保护敏感信息）
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# 日志
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Wrangler
+.wrangler/
+wrangler.toml.bak
+
+# 临时文件
+*.tmp
+*.temp
+.cache/
+
+wrangler.toml
