--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "yideng-1",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "web3-ai-chat-platform",
+  "version": "1.0.0",
+  "description": "Web3 Journey - Cloudflare Workers + React + GraphQL + AI Integration",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "wrangler deploy",
+    "worker:dev": "wrangler dev worker/index.js"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "@apollo/client": "^3.8.8",
+    "graphql": "^16.8.1",
+    "openai": "^6.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "@cloudflare/workers-types": "^4.20231218.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.0.8",
+    "wrangler": "^4.46.0"
   }
 }
